--- a/build.gradle
+++ b/build.gradle
@@ -193,12 +193,16 @@ task publishJavadoc(type: Exec) {
   dependsOn "javadoc"
   commandLine "sh", "-c",
 """
+  git config user.email "dev@forum.spockframework.org"
+  git config user.name "Spock Framework Robot"
+  git fetch origin +gh-pages:gh-pages
   git checkout gh-pages
   rm -rf javadoc/$variantLessVersion
   mkdir javadoc/$variantLessVersion
   cp -r build/javadoc/$variantLessVersion javadoc/
-  git commit -am "Publish javadoc/$variantLessVersion"
-  git push origin gh-pages
+  git add javadoc
+  git commit -m "Publish javadoc/$variantLessVersion"
+  git push origin gh-pages > /dev/null 2>&1
   git checkout -
 """
 }
@@ -206,21 +210,27 @@ task publishDocs(type: Exec) {
   dependsOn "asciidoctor"
   commandLine "sh", "-c",
       """
+  git config user.email "dev@forum.spockframework.org"
+  git config user.name "Spock Framework Robot"
+  git fetch origin +gh-pages:gh-pages
   git checkout gh-pages
   rm -rf docs/$variantLessVersion
   mkdir docs/$variantLessVersion
   cp -r build/docs/$variantLessVersion docs/
-  git commit -am "Publish docs/$variantLessVersion"
-  git push origin gh-pages
+  git add docs
+  git commit -m "Publish docs/$variantLessVersion"
+  git push origin gh-pages > /dev/null 2>&1
   git checkout -
 """
 }
 task tagRelease(type: Exec) {
   commandLine "sh", "-c",
       """
+  git config user.email "dev@forum.spockframework.org"
+  git config user.name "Spock Framework Robot"
   git checkout master
   git tag spock-$baseVersion
-  git push origin spock-$baseVersion
+  git push origin spock-$baseVersion > /dev/null 2>&1
   git checkout -
 """
 }
