--- a/build.gradle
+++ b/build.gradle
@@ -216,7 +216,7 @@ task publishDocs(type: Exec) {
   git checkout gh-pages
   rm -rf docs/$variantLessVersion
   mkdir -p docs/$variantLessVersion
-  cp -r build/docs/$variantLessVersion docs/
+  cp -r build/asciidoc/html5/* docs/$variantLessVersion
   git add docs
   git commit -m "Publish docs/$variantLessVersion"
   git push origin gh-pages > /dev/null 2>&1
