Update publish commands

--- a/build.gradle
+++ b/build.gradle
@@ -202,8 +202,8 @@ task publishJavadoc(type: Exec) {
   cp -r build/javadoc/$variantLessVersion javadoc/
   git add javadoc
   git commit -m "Publish javadoc/$variantLessVersion"
-  git push origin gh-pages > /dev/null 2>&1
-  git checkout -
+  git push origin gh-pages
+  git checkout master
 """
 }
 task publishDocs(type: Exec) {
@@ -219,8 +219,8 @@ task publishDocs(type: Exec) {
   cp -r build/asciidoc/html5/* docs/$variantLessVersion
   git add docs
   git commit -m "Publish docs/$variantLessVersion"
-  git push origin gh-pages > /dev/null 2>&1
-  git checkout -
+  git push origin gh-pages
+  git checkout master
 """
 }
 task tagRelease(type: Exec) {
@@ -230,8 +230,7 @@ task tagRelease(type: Exec) {
   git config user.name "Spock Framework Robot"
   git checkout master
   git tag spock-$baseVersion
-  git push origin spock-$baseVersion > /dev/null 2>&1
-  git checkout -
+  git push origin spock-$baseVersion
 """
 }
 
