Start iteration for 1.1-SNAPSHOT

--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ ext {
   }
   javaVersions = [1.6, 1.7, 1.8]
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
-  baseVersion = "1.0"
-  snapshotVersion = false
+  baseVersion = "1.1"
+  snapshotVersion = true
   fullVersion = "$baseVersion-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : "")
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : "")
   libs = [
