--- a/spock-tapestry/tapestry.gradle
+++ b/spock-tapestry/tapestry.gradle
@@ -10,13 +10,17 @@ repositories {
   maven { url "http://repository.jboss.com/maven2" }
 }
 
-def tapestryVersion = javaVersion >= 1.8 ? "5.4-beta-26" : "5.2.6"
+def tapestryVersion54 = "5.4-beta-26"
+
+def tapestryVersionTest = javaVersion >= 1.8 ? "5.4-beta-26" : "5.2.6"
 
 dependencies {
   compile project(":spock-core")
-  compile "org.apache.tapestry:tapestry-ioc:$tapestryVersion", provided
-  compile "org.apache.tapestry:tapestry5-annotations:$tapestryVersion", provided
+  compile "org.apache.tapestry:tapestry-ioc:$tapestryVersion54", provided
 
   testCompile "javax.inject:javax.inject:1"
+  testRuntime ("org.apache.tapestry:tapestry-ioc:$tapestryVersionTest"){
+    force = true
+  }
 }
 
