--- a/spock-tapestry/tapestry.gradle
+++ b/spock-tapestry/tapestry.gradle
@@ -12,7 +12,9 @@ repositories {
 
 def tapestryVersion54 = "5.4-beta-26"
 
-def tapestryVersionTest = javaVersion >= 1.8 ? "5.4-beta-26" : "5.2.6"
+def useTapestry54 = javaVersion >= 1.8
+
+def tapestryVersionTest = useTapestry54 ? "5.4-beta-26" : "5.2.6"
 
 dependencies {
   compile project(":spock-core")
@@ -24,3 +26,8 @@ dependencies {
   }
 }
 
+if (!useTapestry54) {
+  test {
+    exclude '**/*WithImportModule.class'
+  }
+}
