--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ description = "Spock Framework"
 
 ext {
   variants = [2.0, 2.3, 2.4]
-  variant = System.getProperty("variant") as BigDecimal ?: variants.first()
+  variant = System.getProperty("variant") as BigDecimal ?: variants.last()
   if (variant == 2.0) {
     groovyVersion = "2.0.8"
     minGroovyVersion = "2.0.0"
@@ -26,7 +26,7 @@ ext {
     minGroovyVersion = "2.3.0"
     maxGroovyVersion = "2.3.99"
   } else if (variant == 2.4) {
-    groovyVersion = "2.4.1"
+    groovyVersion = "2.4.4"
     minGroovyVersion = "2.4.0"
     maxGroovyVersion = "2.9.99"
   } else {
