--- a/spock-core/core.gradle
+++ b/spock-core/core.gradle
@@ -13,6 +13,7 @@ Spock is inspired from JUnit, jMock, RSpec, Groovy, Scala, Vulcans, and other fa
 dependencies {
   compile libs.groovy // easiest way to add Groovy dependency to POM
   compile libs.junit
+  compile libs.annotations
 
   compile libs.ant, optional
   compile libs.asm, optional
@@ -25,13 +26,13 @@ jar {
     name = 'spock-core'
     instruction 'Export-Package', 'org.spockframework.*', 'spock.*'
     instruction 'Embed-Dependency', 'groovy;inline=false', 'junit;inline=false'
-    instruction 'Import-Package', 
-        'org.objenesis;version="[1,2)";resolution:=optional', 
-        'org.apache.tools.ant;version="[1,2)";resolution:=optional', 
+    instruction 'Import-Package',
+        'org.objenesis;version="[1,2)";resolution:=optional',
+        'org.apache.tools.ant;version="[1,2)";resolution:=optional',
         'org.apache.tools.ant.types;version="[1,2)";resolution:=optional',
-        'net.sf.cglib.proxy;version="[2.2,2)";resolution:=optional', 
+        'net.sf.cglib.proxy;version="[2.2,2)";resolution:=optional',
         'org.apache.tools.ant.types.selectors;version="[1.7,2)";resolution:=optional',
-		'groovy.lang;version="[1.8,3)"', 'org.codehaus.groovy.*;version="[1.8,3)"', 
+		'groovy.lang;version="[1.8,3)"', 'org.codehaus.groovy.*;version="[1.8,3)"',
         'org.junit.runner;version="[4,7)"'
   }
 }
