Added @Language to String source code params
By annotating parameters with @Language('Groovy') we'll have IDE support
(e.g. syntax check and highlighting) for inlined languages (mostly used in tests)

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ ext {
   fullVersion = "$baseVersion-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : "")
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : "")
   libs = [
+    jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
     ant: "org.apache.ant:ant:1.9.4",
     asm: "org.ow2.asm:asm:5.0.3",
     cglib: "cglib:cglib-nodep:3.1",
