--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -9,18 +9,11 @@ configurations {
   junit
 }
 
-// for "com.github.cglib:cglib.cglib-nodep:5503bcca74"
-repositories {
-  maven {
-    url "https://jitpack.io"
-  }
-}
-
 dependencies {
   testCompile project(":spock-core")
 
   testRuntime libs.asm
-  testRuntime javaVersion >= 1.8 ? "com.github.cglib.cglib:cglib-nodep:5503bcca74" : libs.cglib
+  testRuntime libs.cglib
   testRuntime libs.objenesis
   testRuntime libs.h2database
 
