made project releasable using jitpack.io by:
 - signing the poms only when uploadArchives is in gradle taskGraph (just as it is with jars)
 - making project.version and project.group overridable using -Pversion and -Pgroup gralde commandline parameters (jitpack needs this) by moving them to gradle.properties

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ ext {
   }
   javaVersions = [1.6, 1.7, 1.8]
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
-  baseVersion = "1.1"
+  baseVersion = project.version
   snapshotVersion = true
   fullVersion = "$baseVersion-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : "")
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : "")
@@ -54,7 +54,6 @@ ext {
 allprojects {
   ext.displayName = null
 
-  group = "org.spockframework"
   version = fullVersion
 
   apply from: script("common")
