--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ description = "Spock Framework"
 ext {
   variants = [2.0, 2.3, 2.4]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
+  //jitpack.io users probably want to be on the bleeding edge
+  if (System.getProperty('user.home')?.contains('jitpack')) {
+    variant = variants.last()
+  }
   if (variant == 2.0) {
     groovyVersion = "2.0.8"
     minGroovyVersion = "2.0.0"
