Add support for detached mocks, stubs, and spies (java-only)
This implements #427
Move MockingApi to new spock.mock package.

--- a/spock-spring/spring.gradle
+++ b/spock-spring/spring.gradle
@@ -15,8 +15,8 @@ dependencies {
   compile project(":spock-core")
   compile "org.springframework:spring-test:$springVersion", provided
   compile "org.springframework:spring-beans:$springVersion", provided
+  compile "org.springframework:spring-context:$springVersion", provided
 
-  testCompile "org.springframework:spring-context:$springVersion"
   // not used directly at compile-time, but needed by groovyc
   testCompile "org.springframework:spring-core:$springVersion"
   testCompile "org.springframework:spring-jdbc:$springVersion"
