--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,8 @@ include "spock-core"
 include "spock-specs"
 include "spock-spring"
 include "spock-spring:boot-test"
+include "spock-spring:spring2-test"
+include "spock-spring:spring3-test"
 include "spock-guice"
 include "spock-tapestry"
 include "spock-unitils"
