Temporary disable promoteRepository task
To be able to manually verify Nexus repository content before publishing
to Maven Central.

--- a/build.gradle
+++ b/build.gradle
@@ -191,7 +191,9 @@ if (gradle.startParameter.taskNames == ["travisCiBuild"]) {
       gradle.startParameter.taskNames += ["uploadArchives"]
       if (variant == variants.max()) {
         if (!snapshotVersion) {
-          gradle.startParameter.taskNames += ["closeRepository", "tagRelease", "promoteRepository"]
+//          //enable "promoteRepository" after content of the first automatic release is verified
+//          gradle.startParameter.taskNames += ["closeRepository", "tagRelease", "promoteRepository"]
+          gradle.startParameter.taskNames += ["closeRepository", "tagRelease"]
         }
       }
     }
