--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ description = "Spock Framework"
 
 ext {
   variants = [2.0, 2.3, 2.4]
-  variant = System.getProperty("variant") as BigDecimal ?: variants.first()
+  variant = System.getProperty("variant") as BigDecimal ?: variants.last()
   if (variant == 2.0) {
     groovyVersion = "2.0.8"
     minGroovyVersion = "2.0.0"
