Ensured Java 6 compatibility by using Tomcat 7 for Spring-Boot WebMVC tests.

--- a/spock-spring/boot-test/boot-test.gradle
+++ b/spock-spring/boot-test/boot-test.gradle
@@ -32,3 +32,14 @@ repositories {
   maven { url "https://repo.spring.io/snapshot" }
   maven { url "https://repo.spring.io/milestone" }
 }
+
+// use Tomcat 7 to ensure Java 6 compatibility
+configurations.all {
+  resolutionStrategy {
+    eachDependency {
+      if (it.requested.group == 'org.apache.tomcat.embed') {
+        it.useVersion '7.0.56'
+      }
+    }
+  }
+}
