label 1.1-rc-1 release

--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,10 @@ ext {
   javaVersions = [1.6, 1.7, 1.8]
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
   baseVersion = "1.1"
-  snapshotVersion = true
-  fullVersion = "$baseVersion-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : "")
-  variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : "")
+  snapshotVersion = false
+  releaseCandidate = 1
+  fullVersion = "$baseVersion-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : "") + (releaseCandidate ? "-rc-$releaseCandidate" : "")
+  variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : "") + (releaseCandidate ? "-rc-$releaseCandidate" : "")
   libs = [
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
     ant: "org.apache.ant:ant:1.9.7",
