Added support for mock class creation using Byte Buddy.

--- a/spock-report/report.gradle
+++ b/spock-report/report.gradle
@@ -16,6 +16,11 @@ test {
   exclude "org/spockframework/report/sample/FightOrFlightSpec.class"
 }
 
+testCglib {
+  exclude "org/spockframework/report/sample/FightOrFlightStory.class"
+  exclude "org/spockframework/report/sample/FightOrFlightSpec.class"
+}
+
 ext.spockLogFileDir = file("$buildDir/spock/logFiles")
 ext.spockLogFileName = "spock-log"
 
