--- a/spock-core/core.gradle
+++ b/spock-core/core.gradle
@@ -17,6 +17,7 @@ dependencies {
   compile libs.jetbrainsAnnotations, optional
   compile libs.ant, optional
   compile libs.asm, optional
+  compile libs.bytebuddy, optional
   compile libs.cglib, optional
   compile libs.objenesis, optional
 }
@@ -30,6 +31,11 @@ jar {
         'org.objenesis;version="[1,2)";resolution:=optional', 
         'org.apache.tools.ant;version="[1,2)";resolution:=optional', 
         'org.apache.tools.ant.types;version="[1,2)";resolution:=optional',
+        'net.bytebuddy;version="[1.4.17,1)";resolution:=optional',
+        'net.bytebuddy.dynamic;version="[1.4.17,1)";resolution:=optional',
+        'net.bytebuddy.implementation;version="[1.4.17,1)";resolution:=optional',
+        'net.bytebuddy.implementation.bind.annotation;version="[1.4.17,1)";resolution:=optional',
+        'net.bytebuddy.description.modifier;version="[1.4.17,1)";resolution:=optional',
         'net.sf.cglib.proxy;version="[2.2,2)";resolution:=optional', 
         'org.apache.tools.ant.types.selectors;version="[1.7,2)";resolution:=optional',
         'groovy.lang;version="[1.8,3)"', 'org.codehaus.groovy.*;version="[1.8,3)"', 
