--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -13,6 +13,7 @@ dependencies {
   testCompile project(":spock-core")
 
   testRuntime libs.asm
+  testRuntime libs.bytebuddy
   testRuntime libs.cglib
   testRuntime libs.objenesis
   testRuntime libs.h2database
