Update spring dependency from 1.4.0.M3 to 1.4.0.RELEASE

--- a/spock-spring/boot-test/boot-test.gradle
+++ b/spock-spring/boot-test/boot-test.gradle
@@ -1,6 +1,6 @@
 buildscript {
   ext {
-    springBootVersion = '1.4.0.M3'
+    springBootVersion = '1.4.0.RELEASE'
   }
   repositories {
     mavenCentral()
