Change boot-test to only execute when Java 7 or higher is available
Since 1.4.0.RELEASE the spring-boot-gradle plugin requires at least
Java 7 so we decided to follow this version requirement for this
subproject.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,15 @@
 include "spock-core"
 include "spock-specs"
 include "spock-spring"
-include "spock-spring:boot-test"
 include "spock-guice"
 include "spock-tapestry"
 include "spock-unitils"
 include "spock-report"
 include "spock-gradle"
+
+if (JavaVersion.current().java7Compatible) {
+  include "spock-spring:boot-test"
+}
 
 rootProject.name = "spock"
 nameBuildScriptsAfterProjectNames(rootProject.children)
