--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ matrix:
 
 install: true
 
-script: ./gradlew travisCiBuild -Dvariant=$VARIANT
+script: ./gradlew travisCiBuild -Dvariant=$VARIANT -Dscan
 
 notifications:
   slack:
