--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,12 @@
 environment:
   JAVA_HOME: C:\Program Files\Java\jdk1.7.0
-  
+
 shallow_clone: true
 
 build_script:
-  - gradlew appveyorCiBuild
- 
+  - gradlew appveyorCiBuild -Dscan
+
 test: off
- 
+
 #test_script:
 #  - gradlew test
