--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ ext {
   javaVersions = [1.6, 1.7, 1.8]
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
   baseVersion = "1.1"
-  snapshotVersion = false
+  snapshotVersion = true
   releaseCandidate = 1
   fullVersion = "$baseVersion-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : "") + (releaseCandidate ? "-rc-$releaseCandidate" : "")
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : "") + (releaseCandidate ? "-rc-$releaseCandidate" : "")
