Add spock-bom project
The spock-bom project generates a Maven compatible bill of materials
pom.xml which manages all spock artifacts.

--- a/build.gradle
+++ b/build.gradle
@@ -104,11 +104,12 @@ subprojects {
   }
 
   signing {
+    required { gradle.taskGraph.hasTask('uploadArchives') }
     sign configurations.archives
   }
 
   signArchives {
-    onlyIf { gradle.taskGraph.hasTask(uploadArchives) }
+    onlyIf { gradle.taskGraph.hasTask('uploadArchives') }
   }
 
   ext."signing.keyId" = "2EA0A67F"
