--- a/build.gradle
+++ b/build.gradle
@@ -272,6 +272,9 @@ asciidoctor {
   attributes "source-highlighter": "coderay", "linkcss": true
   // also treats the included specs as inputs
   inputs.dir file("spock-specs/src/test/groovy/org/spockframework/docs")
+  inputs.dir file("spock-spring/src/test/groovy/org/spockframework/docs")
+  inputs.dir file("spock-spring/src/test/resources/org/spockframework/docs")
+  inputs.dir file("spock-spring/boot/test/src/test/groovy/org/spockframework/boot")
 }
 
 File script(String name) {
