--- a/spock-tapestry/tapestry.gradle
+++ b/spock-tapestry/tapestry.gradle
@@ -10,11 +10,11 @@ repositories {
   maven { url "http://repository.jboss.com/maven2" }
 }
 
-def tapestryVersion54 = "5.4-beta-26"
+def tapestryVersion54 = "5.4.1"
 
 def useTapestry54 = javaVersion >= 1.8
 
-def tapestryVersionTest = useTapestry54 ? "5.4-beta-26" : "5.2.6"
+def tapestryVersionTest = useTapestry54 ? tapestryVersion54 : "5.2.6"
 
 dependencies {
   compile project(":spock-core")
