Add support for iteration reporting, Update libraries and resources

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,6 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{java,groovy,gradle,xml}]
+[*.{java,groovy,gradle,xml,html,js}]
 indent_style = space
 indent_size = 2
