Add ScanScopedBeans-Annotation to support scoped beans better
Currently Spring users run into issues if they have scoped beans, but
the scope is not active during the test start, e.g. RequestScope. This
is now changed, and scoped beans are not scanned by default. To allow
scoped mocks to work, the ScanScopedBeans annotation can be used to
enable scanning for all, or only selected scopes.

--- a/spock-spring/boot-test/boot-test.gradle
+++ b/spock-spring/boot-test/boot-test.gradle
@@ -23,10 +23,10 @@ dependencies {
 
   testCompile "org.springframework.boot:spring-boot-starter-test"
   testCompile project(":spock-core")
+  testCompile project(":spock-spring")
 
   runtime "com.h2database:h2"
 
-  testRuntime project(":spock-spring")
 }
 
 repositories {
