Disable gradle daemon for ci builds

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ environment:
 shallow_clone: true
 
 build_script:
-  - gradlew appveyorCiBuild -Dscan
+  - gradlew --no-daemon appveyorCiBuild -Dscan
 
 test: off
 
