--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ matrix:
 
 install: true
 
-script: ./gradlew travisCiBuild -Dvariant=$VARIANT -Dscan
+script: ./gradlew --no-daemon travisCiBuild -Dvariant=$VARIANT -Dscan
 
 notifications:
   slack:
