--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ ext {
   } else {
     throw new InvalidUserDataException("Unknown variant: $variant. Choose one of: $variants")
   }
+  if (System.getProperty("groovyVersion")) {
+    groovyVersion = System.getProperty("groovyVersion")
+  }
   fullVersion = "$baseVersion-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" :  (releaseCandidate ? "-rc-$releaseCandidate" : ""))
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-rc-$releaseCandidate" : ""))
   javaVersions = [1.6, 1.7, 1.8]
