--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ plugins {
 description = "Spock Framework"
 
 ext {
+  baseVersion = "1.1"
+  snapshotVersion = true
+  releaseCandidate = 0
   variants = [2.0, 2.3, 2.4]
   variant = System.getProperty("variant") as BigDecimal ?: variants.last()
   if (variant == 2.0) {
@@ -18,19 +21,16 @@ ext {
     minGroovyVersion = "2.3.0"
     maxGroovyVersion = "2.3.99"
   } else if (variant == 2.4) {
-    groovyVersion = "2.4.6"
+    groovyVersion = "2.4.9"
     minGroovyVersion = "2.4.0"
-    maxGroovyVersion = "2.9.99"
+    maxGroovyVersion = snapshotVersion ? "3.9.99" : "2.9.99" // TODO lock these down once Groovy 3 gets close to RC stage
   } else {
     throw new InvalidUserDataException("Unknown variant: $variant. Choose one of: $variants")
   }
-  javaVersions = [1.6, 1.7, 1.8]
-  javaVersion = System.getProperty("java.specification.version") as BigDecimal
-  baseVersion = "1.1"
-  snapshotVersion = true
-  releaseCandidate = 0
   fullVersion = "$baseVersion-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" :  (releaseCandidate ? "-rc-$releaseCandidate" : ""))
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-rc-$releaseCandidate" : ""))
+  javaVersions = [1.6, 1.7, 1.8]
+  javaVersion = System.getProperty("java.specification.version") as BigDecimal
   libs = [
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
     ant: "org.apache.ant:ant:1.9.7",
