Fix issue with aborted build on Travis
Error message:
Process 'Gradle Test Executor 23' finished with non-zero exit value 137

--- a/build.gradle
+++ b/build.gradle
@@ -161,6 +161,9 @@ subprojects {
         destination = file("$destination/$variant")
       }
     }
+    //Required for building on Travis' container-based infrastructure to not be killed with
+    //'exit code 137' - https://github.com/travis-ci/travis-ci/issues/5582
+    jvmArgs '-Xmx512m'
   }
 }
 
