Add code coverage with jacoco and codecov.io
Test results are now put into a folder that includes the test task name
to prevent two different test tasks to override each others result, and
thus requiring a rebuild instead of staying up-to-date.

Also replaced deprecated task.leftShift with doLast

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,12 @@ matrix:
 
 install: true
 
-script: ./gradlew --no-daemon travisCiBuild -Dvariant=$VARIANT -Dscan
+script: 
+  - ./gradlew --no-daemon --version
+  - ./gradlew --no-daemon travisCiBuild -Dvariant=$VARIANT -Dscan
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 notifications:
   slack:
