--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ environment:
 shallow_clone: true
 
 build_script:
+  - gradlew --no-daemon --version
   - gradlew --no-daemon appveyorCiBuild -Dscan
 
 test: off
