--- a/build.gradle
+++ b/build.gradle
@@ -305,7 +305,7 @@ configureGroovydoc(groovydoc)
 asciidoctor {
   sourceDir = file("docs")
   logDocuments = true
-  attributes "source-highlighter": "coderay", "linkcss": true
+  attributes "source-highlighter": "coderay", "linkcss": true, "revnumber": variantLessVersion
   // also treats the included specs as inputs
   inputs.dir file("spock-specs/src/test/groovy/org/spockframework/docs")
   inputs.dir file("spock-spring/src/test/groovy/org/spockframework/docs")
