--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ plugins {
 description = "Spock Framework"
 
 ext {
-  baseVersion = "1.1"
-  snapshotVersion = false
+  baseVersion = "1.2"
+  snapshotVersion = true
   releaseCandidate = 0
   variants = [2.0, 2.3, 2.4]
   variant = System.getProperty("variant") as BigDecimal ?: variants.last()
