--- a/spock-spring/spring.gradle
+++ b/spock-spring/spring.gradle
@@ -1,6 +1,6 @@
 apply from: script("publishMaven")
 
-displayName = "Spock Framework - Spring Module"
+ext.displayName = "Spock Framework - Spring Module"
 
 description = "Spock's Spring Module makes it possible to use Spring's TestContext framework together with Spock. \
 Supports Spring 2.5.x, 3.x, and 4.x."
