Clean more from cache for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ sudo: false # run on container-based infrastructure
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -f $HOME/.gradle/user-id.txt.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
   - rm -fr $HOME/.gradle/caches/*/scripts/
   - rm -fr $HOME/.gradle/caches/*/scripts-remapped/
+  - rm -fr $HOME/.gradle/caches/*/fileHashes/
+  - rm -fr $HOME/.gradle/jars*
 cache:
   directories:
     - $HOME/.gradle/caches/
