Change spock-core Automatic-Module-Name to org.spockframework.core and
Update Readme to include Java 9 Notes and add Jitpack.io reference

--- a/spock-core/core.gradle
+++ b/spock-core/core.gradle
@@ -34,7 +34,7 @@ jar {
       'Implementation-Title': project.name,
       'Implementation-Version': variantLessVersion,
       'Implementation-Vendor': 'spockframework.org',
-      'Automatic-Module-Name': 'org.spockframework'
+      'Automatic-Module-Name': 'org.spockframework.core'
     )
     instruction 'Export-Package', 'org.spockframework.*', 'spock.*'
     instruction 'Embed-Dependency', 'groovy;inline=false', 'junit;inline=false'
