--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ if (JavaVersion.current().java7Compatible) {
 }
 
 if (JavaVersion.current().java8Compatible) {
+  include "spock-spring:boot2-test"
   include "spock-spring:spring5-test"
 }
 
